# pyskroutz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  CODE_OF_CONDUCT.md  MANIFEST  Pipfile  README.md  Skroutz.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml  testing.yml
api/client/: index.html
api/resources/books/: index.html
api/resources/categories/: index.html
api/resources/filter_groups/: index.html
api/resources/flags/: index.html
api/resources/manufacturers/: index.html
api/resources/products/: index.html
api/resources/search/: index.html
api/resources/shops/: index.html
api/resources/skus/: index.html
api/resources/user_favorites/: index.html
api/resources/user_notifications/: index.html
api/resources/user_profile/: index.html
api/utils/: index.html
contributing/: index.html
docs/: CNAME  api.md  contributing.md  index.md
docs/api/: client.md  endpoints.md  models.md  utils.md
docs/api/endpoints/: books.md  categories.md  products.md  skus.md
docs/api/models/: books.md  categories.md  filter_groups.md  flags.md  manufacturers.md  products.md  search.md  shops.md  skus.md  user_favorites.md  user_profile.md
docs/api/resources/: books.md  categories.md  filter_groups.md  flags.md  manufacturers.md  products.md  search.md  shops.md  skus.md  user_favorites.md  user_notifications.md  user_profile.md
docs/overrides/: main.html
examples/: Authorization.md  Category.md  Category.py  SKU.md  SKU.py  Shop.md  authorization.py
license/: index.html
overrides/: main.html
pySkroutz/: Skroutz.py  __init__.py
search/: search_index.json
skroutz-sdk/: Category.py
src/pyskroutz/: __init__.py  client.py  exceptions.py  serializers.py  utils.py
src/pyskroutz/client/: __init__.py  base.py  base_client.py  categories.py
src/pyskroutz/endpoints/: __init__.py  books.py  categories.py  products.py  skus.py
src/pyskroutz/models/: __init__.py  base.py  base_models.py  books.py  categories.py  favorites.py  filters.py  flags.py  items.py  manufacturers.py  notifications.py  products.py  search.py  shops.py  skus.py  users.py
src/pyskroutz/resources/: base.py  books.py  categories.py  favorites.py  filters.py  flags.py  manufacturers.py  notifications.py  products.py  search.py  shops.py  skus.py  users.py
tests/: __init__.py  test_client.py  test_models.py  test_resources.py  test_serializers.py  test_utils.py
tests/fixtures/: categories_childrens_list.json  categories_parent_retrieve.json  categories_retrieve.json
tests/fixtures/responses/: author__.json  author__books.json  autocomplete.json  book_categories__.json  book_categories__books.json  book_categories__filters.json  books.json  books__details.json  books__search.json  books__similar_by_author.json  books_categories.json  categories.json  categories__.json  categories__children.json  categories__filter_groups.json  categories__parent.json  categories__root.json  categories__specifications.json  categories_list.json  categories_root_retrieve.json  categories_specifications_group_list.json  favorite_lists.json  favorite_lists__favorites.json  favorite_lists__post.json  favorites.json  favorites__.json  favorites__post.json  favorites__put.json  flags.json  locations__find.json  manufacturers.json  manufacturers__.json  manufacturers__categories.json  manufacturers__skus.json  notifications.json  notifications__.json  personalization.json  personalization_put.json  products__.json  publisher__.json  (+36 more)
