[tool.poetry]
name = "pyskroutz"
version = "0.2.0"
description = "A Python client for Skroutz API."
authors = ["Panagiotis Simakis"]
maintainers = ["Panagiotis Simakis"]
readme = "README.md"
documentation = "https://pyskroutz.simakis.me/en/latest/"
repository = "https://github.com/sp1thas/pyskroutz"
keywords = ["skroutz", "skroutz-api", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Natural Language :: Greek"
]
packages = [{ include = "pyskroutz", from = "src" }]
license = "GPL-3.0-only"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sp1thas/pyskroutz/issues"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.25.1"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.0"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
