[metadata]
name = pyskroutz
author = Panagiotis Simakis
author_email = sp1thas@autistici.org
version = file:VERSION
description = A Python client for Skroutz API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = skroutz, skroutz-api, api-client, client, api
license = GPLv3
url = https://github.com/sp1thas/pyskroutz
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English
    Natural Language :: Greek

[options]
zip_safe=False
include_package_data=True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov=pyskroutz --cov-report=xml
